--- a/NLP_AI/NLP_AI/NLP_AI.csproj
+++ b/NLP_AI/NLP_AI/NLP_AI.csproj
@@ -103,9 +103,6 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <SDKReference Include="Bing.Speech, Version=1.0">
-      <Name>Bing.Speech</Name>
-    </SDKReference>
     <SDKReference Include="Microsoft.VCLibs, version=12.0">
       <Name>Microsoft Visual C++ 2013 Runtime Package for Windows</Name>
     </SDKReference>
@@ -140,6 +137,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Bing.Speech, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\AppX\Bing.Speech.winmd</HintPath>
+    </Reference>
+    <Reference Include="Bing.Speech.Xaml.SpeechRecognizerUx">
+      <HintPath>bin\Debug\Bing.Speech.Xaml.SpeechRecognizerUx.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Bing.Platform.Logging.ClientWinRT, Version=4.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\Microsoft.Bing.Platform.Logging.ClientWinRT.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
